--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "lint": "eslint src --ext .ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "TuanLA",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/sharp": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "eslint": "^8.56.0",
@@ -23,6 +24,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "sharp": "^0.33.2"
   }
 }
