--- a/package.json
+++ b/package.json
@@ -5,21 +5,29 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./src/index.ts",
-    "lint": "eslint src --ext .ts"
+    "build": "npx tsc",
+    "lint": "eslint src --ext .ts",
+    "jasmine": "jasmine",
+    "test": "npm run build && npm run jasmine",
+    "prettier": "prettier --config .prettierrc src/**/*.ts --write"
   },
   "keywords": [],
   "author": "TuanLA",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jasmine": "^5.1.4",
     "@types/sharp": "^0.32.0",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "jasmine": "^5.1.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "nodemon": "^3.0.3",
+    "supertest": "^6.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
